[package]
name = "authors"
description = "Print and format authors from [\"name <email>\"] lists"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/adam-gaia/authors"
repository = "https://github.com/adam-gaia/authors"
authors = ["Adam Gaia <git@agaia.dev>"]

[[bin]]
name = "authors"
path = "src/main.rs"

[dependencies]
annotate-snippets = "0.11.5"
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
winnow = "0.7.10"

[dev-dependencies]
pretty_assertions = "1.4.1"
trycmd = "0.15.9"
rstest = "0.25.0"
s-string = "1.0.0"
